k8s/services/101_translator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: translator-server
  template:
    metadata:
      labels:
        app: translator-server
    spec:
      containers:
      - name: translator-server
        image: translator:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
