k8s/services/104_task_dispatch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-dispatch-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: task-dispatch-server
  template:
    metadata:
      labels:
        app: task-dispatch-server
    spec:
      containers:
      - name: task-dispatch-server
        image: task_dispatch:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
