k8s/services/100_greeter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: greeter-server
  template:
    metadata:
      labels:
        app: greeter-server
    spec:
      containers:
      - name: greeter-server
        image: greeter:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: greeter-server
  ports:
  - port: 8080
    targetPort: 8080
