k8s/services/103_streamer2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamer2-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: streamer2-server
  template:
    metadata:
      labels:
        app: streamer2-server
    spec:
      containers:
      - name: streamer2
        image: streamer2:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 8080 # api
        - containerPort: 8081 # metrics
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
---
apiVersion: v1
kind: Service
metadata:
  name: streamer2-service
  namespace: demo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8081"
spec:
  type: ClusterIP
  selector:
    app: streamer2-server
  ports:
  - name: api
    port: 8080
    targetPort: 8080
  - name: metrics
    port: 8081
    targetPort: 8081
