k8s/services/10_monitoring_ext.yml
apiVersion: v1
kind: Service
metadata:
  name: otel-endpoint
  namespace: demo
spec:
  type: ExternalName
  externalName: opentelemetry-collector-service.monitoring.svc.cluster.local
  ports:
  - port: 4317
    name: otlp-grpc
  - port: 4318
    name: otlp-http
