k8s/services/11_redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
      - name: redis-server
        image: redis:alpine
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 9121
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: demo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9121"
spec:
  selector:
    app: redis-server
  ports:
  - port: 6379
    name: redis-server-port
  - port: 9121
    name: redis-exporter-port
---
apiVersion: v1
kind: Service
metadata:
  name: redis-port
  namespace: demo
spec:
  type: NodePort
  selector:
    app: redis-server
  ports:
    - name: redis
      port: 6379
      nodePort: 30010
